// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:fieldSet 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active no-border"
        >
          <legend
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header bg-dark noTitle"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow-wrap"
            >
              <icon-mock
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow icon icon-right-arrow-bold __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow"
                icon="right-arrow-bold"
              />
            </span>
          </legend>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body bg-white"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form--horizontal"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                    data-amis-name="text"
                    data-role="form-item"
                  >
                    <label
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                    >
                      <span />
                    </label>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:fieldSet with mode 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active"
        >
          <legend
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header noTitle"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form--horizontal"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                    data-amis-name="text1"
                    data-role="form-item"
                  >
                    <label
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                    >
                      <span>
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            文本1
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text1"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                    data-amis-name="text2"
                    data-role="form-item"
                  >
                    <label
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                    >
                      <span>
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            文本2
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text2"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:fieldSet with mode 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active"
        >
          <legend
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header noTitle"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form--inline"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--inline"
                    data-amis-name="text1"
                    data-role="form-item"
                  >
                    <label
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                    >
                      <span>
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            文本1
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text1"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--inline"
                    data-amis-name="text2"
                    data-role="form-item"
                  >
                    <label
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                    >
                      <span>
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            文本2
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text2"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:fieldSet with mode 3`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active"
        >
          <legend
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header noTitle"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form--justify"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                    data-amis-name="text1"
                    data-role="form-item"
                  >
                    <label
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                    >
                      <span>
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            文本1
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          class=""
                          name="text1"
                          placeholder=""
                          size="10"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                    data-amis-name="text2"
                    data-role="form-item"
                  >
                    <label
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                    >
                      <span>
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            文本2
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          class=""
                          name="text2"
                          placeholder=""
                          size="10"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:fieldSet with titlePosition & collapseTitle & title 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse is-active __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse--title-bottom"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-contentWrapper"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-body"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-content"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                    data-amis-name="text1"
                    data-role="form-item"
                  >
                    <label
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                    >
                      <span>
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            文本1
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          class=""
                          name="text1"
                          placeholder=""
                          size="10"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                    data-amis-name="text2"
                    data-role="form-item"
                  >
                    <label
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                    >
                      <span>
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            文本2
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          class=""
                          name="text2"
                          placeholder=""
                          size="10"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-header"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow-wrap"
            >
              <icon-mock
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow icon icon-right-arrow-bold __PRISMUI_COMPONENT_CLASS_PREFIX__Collapse-arrow"
                icon="right-arrow-bold"
              />
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                收起设置
              </span>
            </span>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;
